--- a/04-Recopilacion_datos_en_el_campo.Rmd
+++ b/04-Recopilacion_datos_en_el_campo.Rmd
@@ -1,57 +1,81 @@
 # Como recopilar datos en el campo 
 
-Por: Raymond L. Tremblay y Aucencia
+Por: Raymond L. Tremblay, Aucencia Emeterio-Lara, Mariana Hernández-Apolinar
 
-## Identificar la especie de estudio
+## Crecimiento de las orquídeas
+En cualquier estudio que aborde la dinámica poblacional, es necesario conocer las características biológicas básicas de la especie de interés. De acuerdo a la morfología, se pueden identificar al menos tres grupos de orquídeas epífitas: plantas con tallos engrosados y modificados conocidos como pseudobulbos (e.g Laelia, Oncidium, Encyclia, Sthanhopea, Maxilaria, Rhynchostelle, etc), plantas con tallos simples o delgados (e.g Epidendrum, Dichea) y un tercer grupo con pseudobulbos o tallos compactos, poco visibles, y con sus respectivas hojas engrosadas (e. g. Trichocentrum). En el caso de las orquídeas terrestres se pueden identificar cinco tipos: plantas con tallos y hojas alternas o en espiral (v. g. Cypripedium, Dichromanthus, Habenaria, Triphora), plantas con hojas solitarias o en pares (v.g. Bletia, Schiedeella, Malaxis, Govenia), plantas con hojas en roseta (Brachystele, Deiregyne, Sarcoglottis), plantas con hojas en abanico (Cymbidium, Paphiopedilum, Phragmipedium), plantas sin hojas (Rhizanthella, Triphora) y plantas con pseudobulbos (Oeceoclades, Cymbidium).
 
-Para cualquier studio usando el acercamiento de dinamica poblacional es necesario conocer lo básico de la especie de interes y las etapas/edades que corresponde al ciclo de vida de esa misma.  Poder reconocer las semillas, plántulas, juveniles y adultos y si hay etapas latentes.  Algunos retos en en el estudio de las orquideas es el siguimiento de las semillas y plántulas en el campo.  La dispersión de las semillas en espacio ha sido estudiado muy poco ( Sabat. et al.   ) debido a sus tamaños tan pequeños y dificultad de seguir en el espacio.  Los métodos de seguir las semillas en su ambiente natural incluye tipicamente ponerlos en una malla y ponerlos en el suelo o la corteza y recogerlos más tarde para ver si estas germinaron (ref). 
+El crecimiento en las orquídeas epífitas como terrestres es a partir de las yemas de reiteración, las cuales se encuentran en la base de pseudobulbos de plantas epífitas y justo por debajo del suelo en los cormos, rizomas, tubérculos y pseudobulbos de plantas terrestres. Dichas estructuras se desarrollan de forma sucesiva unidos por un rizoma. Con la activación de estas yemas, en cada temporada de crecimiento se generan estos mismos órganos de perennación o reiteración, así como los tallos, las flores e inflorescencias y las hojas, según la especie de orquídea que se trate. El conjunto de estructuras que cada temporada de crecimiento que se genera, representa la unidad de crecimiento básica o “módulo”, el cual es común a todos los individuos de la población de estudio (Harper, 1977).  En particular, en pseudobulbos y rizomas, existen también yemas de reserva, las cuales se mantienen latentes y pueden activarse en el caso de que el nuevo módulo muera o cuando las condiciones ambientales sean favorables para el desarrollo de más de un módulo, dando origen a nuevas líneas o frentes de crecimiento a través de las cuales una planta puede continuar su propagación (Figuras 1 y 2).
 
-Identificar plántulas en orquídeas terrestres tiende también a ser muy complidado, ya que están escondidas entre vegetación o cubierta de tierra.  La orquideas epitifas, en ciertas especies se puede identificar las plántulas (si no están cubierta de musgo o otra vegetación), pero distinguir entre plántuls de diferentes especies puede ser imposible.  Por ejemplo distinguir las plántulas de diferentes especies de *Lepanthes* en el mismo forofito no es posible (Tremblay comunicación personal). El método de identificar a que especie pertenece fue de seguir estos individuos a las otras etapas (junenil o adulto).  Por ejemplo la forma de crecimiento del tallo es diferente entre *Lepanthes eltoroensis* (prostate) versus *Lepanthes woodburyana* (erect). Por consecuencia idividuos que no sobreviven a la próxima etapa no se sabe a que especie pertenece.        
+Las orquídeas epífitas y terrestres tienen un crecimiento perenne; es decir se mantienen, no son anuales y son de mediana y larga vida. No obstante, es importante hacer notar que la mayoría de las orquídeas terrestres son estacionales, por lo que en campo las hojas, tallos e inflorescencias solo se observan en un periodo del año y el resto del tiempo desaparecen. A pesar de esto, es importante recordar que éstas no están muertas, como sería el caso de las plantas anuales, las orquídeas permanecen vivas en estado de latencia (i.e.fase subterránea), gracias a la presencia de cormos, pseudobulbos, tubérculos o  rizomas, que además de ser órganos de perennación subterráneos, también son órganos de almacenamiento de recursos, manteniendo la vida de las plantas debajo de la tierra. Esta fase subterránea se presenta en la época desfavorable del año (v.g. seca o fría), mientras que la fase activa o aérea se presenta en la estación favorable, por ejemplo, en la época de lluvias o en primavera. Además, es importante considerar que la latencia puede prolongarse por más de un año en forma consecutiva. Por ejemplo, los tubérculos de *Liparis liliifolia* (Hutchings, 1987; Wells, 1991) y *Orchis simia* (Willems & Bick, 1991) pueden sobrevivir de forma subterránea por tres años, mientras que *Epipactis helleborine* por 5 a 7 años (Light & MacConaill (2006). Esta situación dificulta la estimación de la mortalidad en las orquídeas terrestres, en consecuencia, se desconoce el tamaño real de una población y la supervivencia real de las distintas fases de desarrollo de la especie de interés. 
 
+
+## Reconocimiento de la especie de estudio
+
+Para la recolección de datos en campo es necesario conocer las características biológicas-morfológicas básicas de cada una de las etapas/edades que corresponde al ciclo de vida de la especie de interés. Poder reconocer las semillas, plántulas, juveniles y adultos y etapas latentes cuando las hay.  En ocasiones el reconocimiento de la especie por medio de estructuras reproductivas distintivas facilita la identificación de los individuos mientras están en floración; sin embargo, aún con la presencia de flores hay posibilidades de confusión, sobre todo entre especies de un mismo género. No obstante, uno de los mayores retos en el estudio de las orquídeas es el seguimiento de las semillas y plántulas en campo. En el caso de las semillas, su dispersión ha sido estudiado muy poco (Sabat. et al.   ) debido a sus tamaños tan pequeños y dificultad de seguir en el espacio. Actualmente, los métodos de seguimiento de semillas en su ambiente natural incluyen típicamente el uso de sobres de malla (mesh plancton, 50 μm), que se colocan en el suelo o en la corteza de árboles y se recogen más tarde para ver si éstas germinaron (Rasmussen, 1995). 
+
+Por otro lado, identificar plántulas en orquídeas también tiende a ser muy complicado, en el caso de las terrestres, por ejemplo, en Cypripedium irapeanum éstas presentan tallos muy delgados y su apariencia es semejante al pasto (Hernández-Apolinar, comunicación personal); asimismo, muchas de las plántulas se encuentran escondidas entre vegetación o cubiertas de tierra. En el caso de orquídeas epífitas, algunas plántulas se pueden reconocer si no están cubiertas de musgo, liquen u otra vegetación. Una estrategia que ofrece posibilidades de muestrear las plántulas (terrestres o epífitas) correctas es considerar los individuos cercanos a plantas adultas de la especie de estudio, de donde se asume provienen las nuevas plántulas, pero distinguir entre plántulas de diferentes especies puede ser imposible. Por ejemplo, distinguir las plántulas de diferentes especies de *Lepanthes* en el mismo forofito no es posible (Tremblay comunicación personal). El método para identificar a qué especie pertenece es el seguimiento de los individuos a las siguientes etapas (juvenil o adulto), sin embargo, esto puede representar un periodo de tiempo largo.  Por ejemplo, la forma de crecimiento del tallo es diferente entre *Lepanthes eltoroensis* (prostada) versus *Lepanthes woodburyana* (erecta). Por consecuencia individuos que no sobreviven a la próxima etapa no se sabe a qué especie pertenece.       
+ 
+##Técnica de muestreo
+Las orquídeas epífitas se desarrollan a diferentes alturas del hospedero o forófito
+(mayor concentración en estratos medios II, III), otro grupo corresponde a orquídeas rupícolas
+desarrolladas sobre rocas y acantilados. Será necesario definir una técnica para llegar a las
+plantas en ambos casos, las más comunes son: a) uso de escaleras, método de ascenso de una
+sola cuerda (Jepson, 2000) y técnica de rapel para orquídeas rupícolas. El primer caso presenta
+algunas limitaciones para poder acceder a ramas delgadas de los estratos más altos (IV,
+Johanson, 1974), sin embargo, suele ser un método muy práctico para orquídeas que se
+desarrollan sobre hospederos de porte bajo y medio.
 
 
 ## Marcar los individuos en el campo
 
-Los calidad de los métodos de marcar plantas en el campo para evaluación posterior es primordial para los análisis de dinámica poblacional.  Como se marca y cual es la calidad del marcador para detectar y re-evaluar los individuos en años subsiguiente afecta la calidad de los datos. Si los marcadores individuales se pierden y no se reconoce ese problema, los individuos perdidos por marca no permanente se podría categorizar como muerto, y ese individuo no marcado (por haber perdido su identificación) pudiese ser interpretado como un nuevo individuo (reclutamiento).   Eso resulta en aumento en mortandad y reclutamiento, sesgando los resultados.   Naturalmente, ese sesgo depende de la frecuencia proporcional al tamaño de muestra, menor el tamaño de muestra mayor el sesgo. 
+Debido a la naturaleza sésil de las plantas es posible marcarlas, contarlas fácilmente; sin embargo, el monitoreo y secuenciación de todos y cada uno de los procesos o eventos de desarrollo por los que transita cada uno de los individuos año con año, sólo es posible si nuestro sistema y material de marcaje son de buena calidad. Es decir, la calidad de nuestros datos dependerá de cómo marcamos y la calidad del material que usemos para el marcaje. Por ejemplo, si las marcas se desintegran de un año a otro, se pierden las marcas individuales y sin no le damos importancia, en nuestro monitoreo podemos suponer dos cosas: 1) que el individuo murió o 2) que hay un nuevo reclutamiento en la población (aparece un nuevo individuo sin marca).  Eso resulta en aumento en mortalidad y reclutamiento, sesgando los resultados. Naturalmente, ese sesgo depende de la frecuencia proporcional al tamaño de muestra, menor el tamaño de muestra mayor el sesgo. 
+La calidad y sobre todo la durabilidad del material de marcaje es muy importante cuando hacemos un estudio de largo plazo. En las orquídeas terrestres el tiempo que dura una marca es muy importante, ya que, si bien se espera que posterior a una fase de inactividad haya una fase aérea, no siempre sucede así. Algunas orquídeas terrestres de larga y mediana vida pueden no rebrotar y mantenerse en latencia vegetativa por más de un ciclo anual de forma consecutiva. Por ejemplo, en Liparis lilifolia puede no emerger por tres años continuos (Hutchings, 1987; Wells, 1991), mientras que en Epipactis helleborine por cinco e, incluso, siete años (Light & MacConaill 2006). El poder tener una buena secuenciación de los eventos de un individuo, permitirán tener buenas estimaciones del tamaño poblacional y de la supervivencia en la población. 
 
-El marcados tiene que ser permanente (plástico, metal, etc.) y fácil de encontrar en adición de ser informativo y único para cada planta y reducir las incertidumbres. La dificultad muchas veces proviene de individuos donde los datos son recopilados con numeración similares.  Esos problemas muchas veces encuentra años después cuando se quiere re-evaluar los datos y no hay manera aclarar las dudas. 
+Es así que, el marcado tiene que ser permanente (plástico, metal, etc.) y fácil de encontrar, en adición de ser informativo y único para cada planta para reducir incertidumbre. Una buena técnica en orquídeas epífitas es utilizar etiquetas de aluminio que garantizan la permanencia de los datos rotulados, estas etiquetas pueden sujetarse con diferentes materiales (hilos e.g pescador, cinchos de plástico, alambre, etc). En el caso de las plántulas será necesario definir un material suave para evitar dañar las estructuras frágiles de esa categoría. 
+Por otro lado, además del material utilizado, la dificultad muchas veces proviene del marcaje de individuos con numeración similares.  Esto sucede   años después, cuando se quiere re-evaluar los datos y no hay manera de aclarar las dudas. En las orquídeas terrestres debido al ciclo anual de presencia-ausencia, el marcaje de individuos es complejo, pero un sistema efectivo para el seguimiento de Cypripedium irapeanum y Govenia lagenophora fue enterrar clavos delgados o segmentos de alambre delgado junto a los tallos, los cuales habían sido previamente etiquetados con láminas de aluminio o cinta dymo, semejando banderitas.
+
 
 
 ### Métodos de marca y recaptura
 
 #### Indentificaciones de individuos
 
-Cada planta tiene que tener si propia identificación y que no haya confusión con otros individuos de esa misma población o de otra población.
+Todas y cada una de las plantas seleccionadas para el estudio poblacional deben tener su propia etiqueta de identificación. Esto evitará confundir a los individuos de la misma población o de otras poblaciones. 
+En el primer censo demográfico será necesario registrar todas las variables/características morfológicas y fenológicas de cada uno de los módulos que integran cada planta (excepto estructuras subterráneas en el caso de orquídeas terrestres) necesarias para realizar la clasificación de las plantas.  
+
 
 ##### Una población
 
-Por ejemplo si el estudio comenzó en 2023 y solamente hay una población. Los individuos podrían tener una codificación siguiente 23001, 23002, 23003, ... 23152 para los 152 individuos encontrado y marcado ese año.  El siguiente año se muestra esos individuos y nuevos individuos encontrado comenzarían con 24153. De esta forma ya se conoce cuando fue el primer año de muestreo del individuo y esos nuevos individuos no se confunde con los del año anterior. Cada año comenzaría con identificación del año, y la numeración de los individuos no se repiten en la misma población. Entonces hay redundandia en la codificación ayudando a reducir los errores de codificaciones.     
+Por ejemplo, si el estudio comenzó en 2023 y solamente hay una población. Los individuos podrían tener una codificación siguiente: 23001, 23002, 23003, ... 23152 para los 152 individuos encontrados y marcados ese año.  El siguiente año se muestran esos mismos individuos, así como los nuevos individuos encontrados comenzarán con 24153. De esta forma ya se conoce cuando fue el primer año de muestreo del individuo y esos nuevos individuos no se podrán confundir con los del año anterior. Cada año comenzaría con identificación del año, y la numeración de los individuos no se repite en la misma población, lo cual evita la redundancia en la codificación, ayudando a reducir los errores de codificaciones.       
 
 ###### Multiples poblaciones
 
-Siguiendo con el mismo concepto pero múltiples poblaciones, la numeración de la población pudiese utilizar una codificación alfa numérica, donde la letra del alfabeto representa la población y la número los individuos.  Siguiera así A23001, A23002,..., 23xxx para la primera población y B23001, B23002,..., B23xxx para las segunda población. 
+SSiguiendo con el mismo concepto del inciso anterior, pero aplicado a múltiples poblaciones, en la numeración de la población se puede utilizar una codificación alfanumérica, donde la letra del alfabeto representa a la población y el número a los individuos marcados para su monitoreo.  De esta manera, las marcas individuales se verían de la siguiente forma: A23001, A23002, ..., 23xxx para la primera población y B23001, B23002, ..., B23xxx para la segunda población y así sucesivamente, en caso de estudiar más de dos poblaciones. 
+
+En campo, las orquídeas terrestres forman pequeñas colonias, algunas de menos de 20 individuos e incluso hay especies con individuos aislados (Ej. Govenia lagenophora, Dichromanthus cinnabarinus y D. aurantiacus (Tellez Velasco, 2007; Mariana Hernández-A obs. pers), por lo que su dinámica poblacional generalmente es descrita a partir de la información obtenida en varias colonias o subpoblaciones. En casos similares, el etiquetado en cada subpoblación puede comenzar con el número del sitio y el número de la planta, por ejemplo, 1.1 ó 5.56. En cada sitio los números pueden ser consecutivos de 1 al número máximo de individuos por subpoblación. Los nuevos ingresos en las colonias pueden ser marcados con números consecutivos y se puede agregar el año de ingreso a la población. De la forma que, la nueva planta 10 que ingresa en 2023 al sitio 1, le corresponderá la etiqueta 1.10 2023.      
 
 
 
 ### Relocalización de individuos
 
-Para relocalizar los individuos se puede utilizar marcador permanentes o geo-referencias individuales para cada planta. 
+La relocalización de los individuos debe ser rápida y sencilla, por lo que se deben identificar con marcas permanentes el sitio y los individuos de estudio. Con este objetivo, por ejemplo, se pueden usar banderines, etiquetas de aluminio o plástico, pintura permanente; asimismo, también se pueden geo-referenciar y hacer mapas de localización. Un aspecto que hay que cuidar en la identificación de sitios e individuos es que ésta sea discreta; es decir, que esté protegida y que no sea evidente para todos, a fin de evitar la pérdida de etiquetas por gente ajena a la investigación. Con este fin, por ejemplo, se usan colores poco llamativos, se colocan las marcas en lugares protegidos por la vegetación y las etiquetas deben ser poco voluminosas. 
 
-Métodos de relocalizar los individuos en el campo puede ser complicado.
+Los métodos de relocalización de individuos en campo pueden ser complicados Uno de los métodos más usados para facilitar la relocalización de individuos es amarrar una etiqueta a la planta. Por ejemplo, en las orquídeas epífitas, la etiqueta se coloca alrededor de la base de uno o varios pseudobulbos o bien en la rama del hospedero sobre la que crece la planta, mientras que en orquídeas terrestres se coloca una etiqueta cercana a la planta porque sus tallos y hojas se marchitan y desaparecen al entrar en latencia. Para el amarre de la etiqueta de dymo, aluminio o plástico se usa hilo de pescar, alambre revestido de jardinería o alambre revestido para interfón. En la foto X vemos una planta *Cypripedium acaule* de la región de North Bay, Ontario, Canadá, la cual fue marcada con una etiqueta de aluminio colocada cerca de la planta. Por otra parte, en la foto X vemos una planta de *Laelia speciosa* de la región de Quiroga, Michoacán, México, en la cual la etiqueta plástica de dymo fue atada a la rama en la que crece esta planta.  
+ 
 
- - uno de los métodos es amarar al individuo la identificación individual de forma que se fácil de encontrar y que no se pierde.   Por ejemplo uno puede amarar el "tag" con hilo de pezcar grueso o "twist tags" alrededor de unos pseudobulbos o cerca de la planta. El la foto que sigue vemos una planta *Cypripedium acaule* en la región de North Bay, Ontario, Canada marcado con un tag metálico cerca de la planta
  
  ![Cypripedium acaule marcado; Foto: Tremblay](Figures/Cypripedium_acaule.jpg){width=50%}
  
- 
- **Necesitamos unos ejemplos**
- 
- - otro metodo es grapar el "tag" al lado de los individuos. Este es un método que es adecuado para plantas pequeñas.  NO se debería poner el tag agarrado a la planta, ya que el peso del tag, podría causar daño a la planta, en adición que este caso las hojas no son persistente, por consecuencia al caer una hoja podría perder el "tag".  En esa foto se uso un pequeño clavo para poner el "tag", pero también usando una grapadora puede ser más eficiente y menos dañino al árbol.  En la foto siguiente se ve un tag de plastico amarado con un clavo al lado de de una planta de Lepanthes eltoroensis en Puerto Rico. Posteriormente se cambio el calvo por una grapadora normal.  Ese metodofuncionó muy bien.  
+ ###Plantas pequeñas y epifitas
+
+  - Temblay (XXX) propuso un método adecuado para plantas pequeñas, el cual consiste en colocar la etiqueta al lado de los individuos. En este tipo de individuos NO se debe amarrar la etiqueta a la planta, ya que el peso de la etiqueta puede causarle daño además de que las hojas no son persistentes, por lo que la marca podría perderse.  En la foto X se usó un pequeño clavo para fijar la etiqueta, pero ésta puede también engraparse y puede provocar menos daño al árbol.  En la foto siguiente se ve un individuo de *Lepanthes eltoroensis* en Puerto Rico, el cual fue identificado con una etiqueta de plástico clavada   a la rama del árbol. Como el estudio continuó por varios años, las nuevas etiquetas fueron engrapadas y éste nuevo método funcionó muy bien.  
  
 ![Lepanthes eltoroensis marcado; Foto: Tremblay](Figures/Lep_eltoroensis.png){width=50%}
 
-
-
+### Marcas con banderas.
+Si el sitio está bien protegido y no hay riesgos de atraer atención a las plantas se puede usar pequeñas banderas para facilitar la identificación y recaptura las plantas. 
+NOTA importante: los “tags” no deberían ser fácil de ver en el hábitat ya que podría atraer atención al estudio ya que hay mucha gente que se llevan plantas del campo, incluyendo plantas que son partes de estudios.
 Si el sitio esta bien protegido y no hay riesgos de atraer atención a las plantas se puede usar pequeñas banderas para facilitar la recaptura de las plantas.   
 
 NOTA importante: los "tags" no deberían ser facil de ver en el habitat ya que podría atraer atención al estudio y hay mucha gente que se llevan plantas del campo, incluyendo plantas que son partes de estudios. 
@@ -59,59 +83,111 @@ NOTA importante: los "tags" no deberían ser facil de ver en el habitat ya que p
 
 ![Cypripedium acaule identificado con bandera numerada; Foto: Tremblay](Figures/Cyp_acaule_flag.jpg){width=50%}
  
+###Métodos de triangulación
+Para especies terrestres donde 1) hay que reducir la atención a los individuos en el campo. El método de triangulación funciona muy bien. Es necesario poner dos “pegs” estacas? permanentes en el suelo. Estos son los puntos de referencias que se usa en cada muestreo. Esa técnica es muy común y utilizada para monitorear orquídeas terrestres en Australia y no es invasiva. Se colocan dos estacas fijas en una población y se utilizan dos metros para identificar la distancia entre las estacas y la planta de interés. Las distancias desde las dos clavijas se utilizan para identificar individuos en las poblaciones. Este es un muy buen método cuando los individuos no están demasiado cerca uno del otro (menos de 1 cm de distancia). Es fácil y bastante preciso y deja muy poca evidencia en el campo. Si existe la posibilidad de que haya herbívoros, pájaros, animales o humanos se sientan atraídos por las etiquetas y perturben el área, este es un buen método
+
+
+
+
 
 ## Variables a recoger en el campo
 
-La base de los estudios de dinamica poblacional es evaluar las transiciones entre las etapas de vida incluyendo mortantad y su reprodución.  La información que se recoge del campo tiene que ser facil de recoger y consistente y sin error. Si seguimos ejemplos de los trabajos de campo de Tremblay [ref] con *Lepanthes*, las etapas incluidas son plantulas, juveniles, adultos no reproductivos y adultos reproductivos.  Cada una de estas estapas estan definida especificamente para ese genero. 
+La base de los estudios de dinámica poblacional es evaluar las transiciones entre las etapas que comprendan el ciclo de vida de la planta, incluyendo la mortantad y la reproducción.  La información que se recoge del campo tiene que ser fácil de registrar, ser consistente y sin error. Será necesario determinar cuántas etapas o categorías deberían ser utilizados dependiendo de la especie de estudio, del número de individuos marcados y las preguntas de interés en la investigación. Como veremos a través de los ejemplos, la categorización puede basarse en distintas características de las especies.
+Por otra parte, es importante resaltar que sin importar la variable que usemos para definir las categorías en una especie, el monitoreo riguroso de los individuos marcados en cada categoría permitirá determinar cómo es la dinámica de cada una de las categorías y cuál o cuáles de éstas son muy dinámicas a lo largo del tiempo. 
 
- - **plantula**: individuo que no tiene ninguna hoja con peciolo.
- - **juvenil**: individuo que tiene hojas con peciolo pero no hay ninguna evidencia que fue reproductiva en el pasado (las base de las inflorescencia son persistente)
- - **adulto non-reproductivo**: individuos con inflorescencias secas (ninguna verde)
- - **adulto reproductivo**: individuo con inflorescencia verdes con o sin flores o frutos. 
+Además de la etiqueta que permita reconocer a cada planta, se sugiere marcara el módulo del presente año. En los próximos censos se registrará el cambio o permanencia de la condición de cada módulo del año 1 y las características del nuevo módulo que se desarrolló en cada uno de los frentes de crecimiento de cada planta. En este caso, será necesario etiquetar al nuevo módulo con los datos del año correspondiente. Con ello se definirá el avance, permanencia o retroceso de cada planta a una categoría determinada.
+Con esta finalidad, las variables indispensables que deben registrarse al momento de la primera toma de datos (t), un año después (t+1) (generalmente) y en los periodos de muestreo siguientes (t+n) son las siguientes:
 
-Dependiendo de los estudios pudiese haber más etapas, por ejemplo Tremblay [ ] uso dos etapas de individuos reproductivos.  
-
-Otro ejemplo es el estudio de Hernández-Apolinar con la especie xx. donde incluyo.....   
-
-
-Determinar cuantas categoria deberia ser utilizados y cuales es muy dinamica y depende de la especies, número individuos y las preguntas de interes. 
-
-Las variables a recoger tiene que incluir el minimo las siguientes
-
-  - la etapa en el tiempo t
-  - si esta vivo o muerto en el tiempo t
-  - la cantidad de flores en el tiempo t
+- Todos los individuos seleccionados y marcados deben estar vivos en el tiempo inicial (t)
+  - la etapa del individuo en el tiempo inicial (t)
+  -  la cantidad de flores en el tiempo t
   - la cantidad de frutos en el tiempo t
-  - la presencia y "tagging" de nuevos individuos en el tiempo t+1
-  
-  
+  - si el individuo está vivo o muerto en el tiempo t+1 y subsecuentes muestreos
+ - la etapa del individuo en el tiempo t+1 y subsecuentes muestreos
+  -la cantidad de flores en el tiempo t+1 y subsecuentes muestreos
+  - la cantidad de frutos en el tiempo t+1 y subsecuentes muestreos
+  - la presencia y marcaje de nuevos individuos en el tiempo t+1 y subsecuentes muestreos
+- la procedencia de los nuevos individuos en t+1 y t+n, especificando si se trata de individuos procedentes de semilla o si su origen es por clonación (v.g. keikis, pseudobulbos separados, activación de yemas de reserva en pseudobulbos y rizomas, etc.). 
+
+
+##Ejemplos de categorización en especies de estudio
+#Etapas o estadios de desarrollo
+ *Lepanthes*. Si seguimos los ejemplos del trabajo de campo de Tremblay [ref] con *Lepanthes*, una orquídea miniatura epífita, las etapas incluidas son plántulas, juveniles, adultos no reproductivos y adultos reproductivos. Cabe señalar que, cada una de estas etapas está definida específicamente para cada especie de estudio; es decir, no son fijas por lo que pueden incluir más categorías de estado aún dentro del mismo género *Lepanthes*. Por ejemplo, Tremblay usó en *L. XXX* cinco categorías de estado al incluir una segunda etapa de adulto reproductivo. Además de definir las categorías de estado, en cada estudio es importante tener claro cuáles son las características tomadas en cuenta para su clasificación. A continuación, se describen las categorías generales usadas en el género *Lepanthes* (Tremblay XX):  
+
+
+ - **plantula**: individuo sin hojas y con peciolo.
+ - **juvenil**: individuo con hojas y peciolo, pero sin evidencia de haber sido reproductivo en el pasado (la base de las inflorescencias es persistentes)
+ - **adulto non-reproductivo**: individuos con inflorescencias secas (ninguna verde)
+ - **adulto reproductivo**: individuo con inflorescencia verdes con o sin flores o frutos previos. 
+
+
+*Govenia lagenophora*. Martínez-Villegas y colaboradores (2023) definieron cuatro categorías de estado (i.e. Reproductivo, No reproductivo, Cormo y Ausente) para la orquídea terrestre *Govenia lagenophora*, cuya dinámica poblacional fue analizada en la Reserva del Pedregal de San Ángel, Ciudad de México, México. La estimación de las variables poblacionales fue estimada a partir de    cuatro años de monitoreo.
+*Reproductivo*. Individuos con hojas y con inflorescencia.
+*No reproductivo*. Individuos con hojas y sin evidencia de ser reproductivos
+*Cormo*. Individuos latentes, sin producción de hojas o inflorescencias.
+*Ausente*. Individuos no detectados.
+
+
 Otras variables que pudiese recoger incluye
 
-  - el tamaño de las hojas o la hoja más grande 
-      - *Brasavola cucculata* []: las plantas necesitan un tamaño minimo de largo de hoja antes de florecer
-  - el número de pseudobulbo
-      - ....
-  - la altura de la inflorescencia
-      - *Caladenia valida* []: la altura de la inflorescencia impacta la probabilidad de producir frutos
-  - la altura en el árbol de las epífitas
-     - *Brasavola cucculata* []: la plantas muy bajo menos de 1.5m son depredadas por la cabras
-  - el número de "ramet", un indice del tamaño del genotipo en plantas con crecimiento horizontal
-    - *Cypripedium calceolus var. parviflorum* [Tremblay]: Los estudios evolutivos tienen que reconocer la diferencia entre un "ramet" y un "genet".
+#La altura de la inflorescencia
+*Caladenia*. Tremblay y colaboradores (2009) estudiaron nueve especies del género *Caladenia* en distintas localidades de Australia, cuya demografía fue analizada a partir de tres categorías de estado: individuos vegetativos, individuos en floración e individuos latentes. 
+*Individuos vegetativos*. Individuos con hojas y sin evidencia de ser reproductivos.
+*Reproductivo*. Individuos con hojas y en flor.
+*Latente*. Individuos sin actividad aérea.
+
+
+# Número de pseudobulbos
+*Laelia speciosa*. Hernández-Apolinar (1992) por su parte trabajó con la especie epífita *Laelia speciosa*, en la cual se identificaron cuatro fases: plántulas, juveniles y dos estadios de adultos. Las fases de adultos y juveniles se determinaron a partir del conteo de módulos, que en este caso se trató del número de pseudobulbos por planta. A continuación, se define cada categoría considerada.   
+**plántula: Individuo con un pseudobulbo pequeño (3mm de alto) o sin pseudobulbos y presentado 2 hojas pequeñas (hasta 5 mm de alto) y 1-2 raíces
+**juvenil: Individuo no reproductivo, con 2 a 10 pseudobulbos y que presentan las puntas de los pseudobulbos redondeadas sin evidencia del escapo floral, que es persistente.
+**adulto 1: Individuo con y sin flores, con escapos florales previos y de 11 a 20 pseudobulbos
+**adulto 2:  Individuo con y sin flores, con escapos florales previos y con 21 o más pseudobulbos
+
+#Número de ramets
+*Ophrys sphegodes*. Hutchings (2010) analizó la dinámica poblacional de *Ophrys sphegodes* por 30 años. Esta orquídea terrestre se monitoreó durante su fase aérea, considerando la presencia o ausencia de plantas. A las plantas que emergieron del suelo se les trató como *ramets* (i.e. plantas independientes con la misma información genética), debido a que de los tubérculos (i.e. órganos de perennación subterráneos) de *Ophrys sphegodes* se da origen a más de una planta. Por convención los ramets se analizan como si fueran genéticamente independientes. 
+En el estudio utilizaron tres categorías para su análisis: 
+*Vegetativos*. Individuos no reproductivos caracterizados por la presencia de hojas en roseta.
+*En floración*. Individuos con hojas en roseta que presentan inflorescencia. 
+*Latentes*. Individuos que no emergen en la época de crecimiento. 
+
+#Número de hojas
+*Brassavola cucullata*. Ackerman y colaboradores (2020) trabajaron con tres poblaciones de *Brassavola cucullata* en las Islas de San Eustaquio y Saba, Antillas de Barlovento del Mar Caribe, donde esta especie puede ser epífita o vivir sobre rocas. Usando el número de hojas en esta especie se establecieron cuatro categorías de estado:
+Juveniles 1. Plantas con 1 ó 2 hojas.
+Juveniles 2. Plantas con 3 a 6 hojas.
+Adultos 1. Plantas con 7 a 20 hojas.
+Adultos 2. Plantas con más de 20 hojas.
+
+# Tamaño de la hoja más grande
+*Brassavola cucullata*. Ackerman y colaboradores (2020) también analizaron la dinámica poblacional a partir del tamaño de hoja más grande en los individuos. Debido a que las poblaciones fueron analizadas con modelos de proyección integral (IPM), la descripción de las poblaciones no se basó en categorías. En el estudio la tendencia en la supervivencia y reproducción indicó que las plantas necesitan un tamaño mínimo de la hoja más larga para florecer.
+
+#Tamaño del pseudobulbo más reciente
+*Aspasia principissa*. Zotz y Schmidt (2006) analizaron el comportamiento poblacional de Aspasia principissa en la Isla de Barro Colorado, Panamá. A partir del tamaño del pseudobulbo más reciente, los investigadores determinaron siete categorías de tamaño en la población. Además, se evaluó la presencia de flores y frutos en las plantas con un pseudobulbo reciente mayor a 7 cm de altura.
+**SC1**.  Individuos con tamaño del pseudobulbo más reciente menor a 1.5 cm
+**SC2**.  Individuos con tamaño del pseudobulbo más reciente de 1.6 a 2.5 cm
+**SC3**.  Individuos con tamaño del pseudobulbo más reciente de 2.6–4.0 cm
+**SC4**.  Individuos con tamaño del pseudobulbo más reciente de 4.1–6.0 cm
+**SC5**.  Individuos con tamaño del pseudobulbo más reciente de 6.1–8.0 cm
+**SC6**.  Individuos con tamaño del pseudobulbo más reciente de 8.1–11.0 cm
+**SC7**.  Individuos con tamaño del pseudobulbo más reciente mayor a 11.0 cm 
+
+#Biomasa de la planta
+*Laelia autumnalis*. Emeterio-Lara y colaboradores en preparación estudiaron poblaciones de la orquídea epífita Laelia autumnalis. Como vemos varios trabajos para orquídeas epífitas, han clasificado las plantas de acuerdo con su tamaño (Zotz, 1998; Tremblay & Hutchings 2003; Raventos et al. 2015; Mondragón et al. 2007), metodología adecuada para determinar parámetros demográficos (Harper, 1977), especialmente en especies de vida larga (Caswell, 2001). Y otros de acuerdo a características morfológicas, sin embargo, los autores sugieren que, dado que la biomasa es una expresión de agua y nutrientes almacenados en la planta para crecer y reproducirse, puede ser una variable adecuada para describir el comportamiento demográfico en términos de energía (Zimmerman y Whigham, 1998). Las plantas de Laelia autumnalis fueron clasificadas en cinco categorías con base a su biomasa.
+Plántulas (S). Un primer pseudobulbo pequeño
+Juveniles 1 (J1). < 9.5 gramos de biomasa, sin estructuras reproductivas
+Juveniles 2 (J2). De 9.5 - 23.5 gramos de biomasa, ocasionalmente primeros eventos reproductivos
+Adulto 1 (A1). De 23.5 - 49.5 gramos con restos y estructuras reproductivas en desarrollo
+Adulto 2 (A2). > 49.5 gramos de biomasa con restos de estructuras reproductivas y escasos eventos reproductivos posteriores
+
+#La altura en el árbol de las epífitas 
+Brasavola cucculata []: la localización de la planta sobre el forofito. Las plantas muy bajo, menos de 1.5m son depredadas por cabras
+el número de “ramet”, un indice del tamaño del genotipo en plantas con crecimiento horizontal
+ 
+  - *Cypripedium calceolus var. parviflorum* [Tremblay]: Los estudios evolutivos tienen que reconocer la diferencia entre un "ramet" y un "genet".
   - indicadores de herbivoria sobre la planta
   
   - indicadores de la cantidad plagas sobre la planta como "rust" 
   
-  
-  
-  
-    
-    
-  
-
-
-
-
-
-
+   
 
 ## Referencias
